# boltz2_MSA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  api.Dockerfile  pyproject.toml  worker.Dockerfile
.github/workflows/: build-deploy.yml  ci.yml  deploy-only.yml
docs/: cleanup-report.md  deploy-test-plan.md  gateway-handover.md  testing-strategy.md
scripts/: aca_deploy.sh  setup_trigger.sql
src/boltz2_service/: config.py  enums.py  models.py  repositories.py
src/boltz2_service/api/: app.py  deps.py
src/boltz2_service/api/routes/: auth.py  jobs.py  specs.py  uploads.py
src/boltz2_service/mcp/: auth.py  oauth_provider.py  server.py  stdio.py
src/boltz2_service/schemas/: auth.py  common.py  jobs.py  specs.py  uploads.py
src/boltz2_service/services/: aca_logs.py  auth_hooks.py  email.py  jobs.py  spec_renderer.py  spec_validator.py
src/boltz2_service/worker/: app.py  artifact_bundle.py  boltz2_runner.py  job_processor.py  queue_consumer.py
src/platform_core/: config.py  db.py  pyproject.toml  security.py
src/platform_core/auth/: api_key_auth.py  domain_rules.py  supabase_auth.py
src/platform_core/models/: __init__.py  api_key.py  device_code.py  profile.py
src/platform_core/services/: blob_storage.py  queue.py
