[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioai-platform-core"
version = "0.1.0"
description = "Shared auth, models, and infrastructure for Bio AI Platform services"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "cachetools>=5.3",
    "fastapi>=0.115",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
azure = [
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.11",
    "azure-identity>=1.15",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["platform_core*"]
